# audio-backend

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: com.rs  data.rs  database.rs  event.rs  json.rs  lib.rs
src/access_point/: dbus_codegen.rs  mod.rs
src/access_point/dbus_codegen/: networkmanager.rs  networkmanager_accesspoint.rs  networkmanager_device.rs  networkmanager_settings.rs  networkmanager_settings_connection.rs
src/com/: mdns.rs  mod.rs  websocket.rs  ws.rs
src/common/: access_point.rs  jsonrpc.rs  mod.rs
src/common/dbus_codegen/: mod.rs  networkmanager_connection_active.rs  networkmanager_settings.rs
src/database/: data.rs
src/json/: types.rs
