[package]
name = "audio-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dbus = "0.9"
local-ip-address = "0.6"
log = "0.4"
mdns-sd = "0.20"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tungstenite = "0.29"

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"

[lints.clippy]

# pedantic
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
too_many_lines = "allow"

# restriction
empty_structs_with_brackets = "warn"
if_then_some_else_none = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"
